src/test/ui/structs/struct-fields-hints.stderr
error[E0560]: struct `A` has no field named `bar`
  --> $DIR/struct-fields-hints.rs:10:9
   |
LL |         bar : 42,
   |         ^^^ help: did you mean `car`? (a similarly named field)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0560`.
